[package]
name = "runway-sdk"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust SDK for the Runway API — AI video generation, world models, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AbdelStark/runway-rs"
keywords = ["runway", "ai", "video-generation", "generative-ai", "sdk"]
categories = ["api-bindings", "multimedia::video"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
tracing = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22"
mime_guess = "2"
async-stream = "0.3"
futures-core = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
assert_matches = "1"
futures = "0.3"

[features]
live-tests = []

[[example]]
name = "text_to_video"
path = "examples/text_to_video.rs"

[[example]]
name = "image_to_video"
path = "examples/image_to_video.rs"

[[example]]
name = "video_to_video"
path = "examples/video_to_video.rs"

[[example]]
name = "avatars"
path = "examples/avatars.rs"

[[example]]
name = "workflows"
path = "examples/workflows.rs"

[[example]]
name = "poll_task"
path = "examples/poll_task.rs"
