[package]
name = "runway-sdk"
version = "0.1.0"
edition = "2021"
description = "Async Rust SDK for the Runway API with typed generation requests, uploads, task polling, and workflows."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AbdelStark/runway-rs"
homepage = "https://github.com/AbdelStark/runway-rs"
documentation = "https://docs.rs/runway-sdk"
readme = "README.md"
keywords = ["runway", "runwayml", "video", "generative-ai", "api-client"]
categories = ["api-bindings", "asynchronous", "multimedia::video"]
include = [
    "src/**",
    "examples/**",
    "tests/**",
    "docs/terminal-preview.svg",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
base64 = "0.22"
mime_guess = "2"
async-stream = "0.3"
futures-core = "0.3"
httpdate = "1"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
assert_matches = "1"
futures = "0.3"
dotenvy = "0.15"

[features]
live-tests = []
unstable-endpoints = []

[[example]]
name = "text_to_video"
path = "examples/text_to_video.rs"

[[example]]
name = "image_to_video"
path = "examples/image_to_video.rs"

[[example]]
name = "video_to_video"
path = "examples/video_to_video.rs"

[[example]]
name = "avatars"
path = "examples/avatars.rs"

[[example]]
name = "workflows"
path = "examples/workflows.rs"

[[example]]
name = "poll_task"
path = "examples/poll_task.rs"

[[example]]
name = "lip_sync"
path = "examples/lip_sync.rs"
required-features = ["unstable-endpoints"]

[[example]]
name = "image_upscale"
path = "examples/image_upscale.rs"
required-features = ["unstable-endpoints"]

[[example]]
name = "list_tasks"
path = "examples/list_tasks.rs"
required-features = ["unstable-endpoints"]

[[example]]
name = "text_to_image"
path = "examples/text_to_image.rs"

[[example]]
name = "sound_effect"
path = "examples/sound_effect.rs"

[[example]]
name = "text_to_speech"
path = "examples/text_to_speech.rs"

[[example]]
name = "character_performance"
path = "examples/character_performance.rs"

[[example]]
name = "voice_dubbing"
path = "examples/voice_dubbing.rs"

[[example]]
name = "voice_isolation"
path = "examples/voice_isolation.rs"

[[example]]
name = "documents"
path = "examples/documents.rs"

[[example]]
name = "organization"
path = "examples/organization.rs"

[[example]]
name = "speech_to_speech"
path = "examples/speech_to_speech.rs"

[[example]]
name = "realtime_sessions"
path = "examples/realtime_sessions.rs"

[[example]]
name = "uploads"
path = "examples/uploads.rs"

[[example]]
name = "webhook"
path = "examples/webhook.rs"
